# briskcvd

./: .gitignore  CMakeLists.txt  briskcvd.cmake.in  readme.md
include/brisk/: brisk.h  hammingsse.hpp  keyPoint.hpp
src/: brisk.cc
